# gray2snd

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  audio.c  audio.h  config.h.in  configure.ac  gray2snd.1  gray2snd.c  image.c  image.h
