# Process this file with automake to produce Makefile.in
#
# vim:set softtabstop=3 shiftwidth=3 tabstop=3 expandtab tw=72:
# $Id$
#
# Copyright (C) 2003  Casey Marshall <rsdio@metastatic.org>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the
#
#    Free Software Foundation, Inc.,
#    59 Temple Place, Suite 330,
#    Boston, MA  02111-1307
#    USA
#
# --------------------------------------------------------------------------

bin_PROGRAMS = gray2snd
gray2snd_SOURCES = audio.c audio.h gray2snd.c image.c image.h
man_MANS = gray2snd.1
EXTRA_DIST = test.gray $(man_MANS)
